feat: update security
